--- a/style.css
+++ b/style.css
@@ -54,7 +54,8 @@
      list-style-type: none;
  }
  
- .contacto {
+ .contacto,
+ .nuevo-boton {
      background-color: black;
      color: blanchedalmond;
      border-radius: 100px;
@@ -64,7 +65,8 @@
      height: 50px;
  }
  
- .contacto:hover {
+ .contacto:hover,
+ .nuevo-boton:hover {
      background-position: 0 100%;
  }
  /**Presentacion*/
@@ -126,6 +128,10 @@
  
  .btn1:hover::before {
      width: 100%;
+ }
+ 
+ .nuevo-boton {
+     display: none;
  }
  
  .seccion-imagen {
@@ -337,6 +343,15 @@
      display: none;
  }
  /* Responsive */
+ 
+ @media (max-width: 1030px) {
+     .middle {
+         display: none;
+     }
+     .nuevo-boton {
+         display: block;
+     }
+ }
  
  @media (max-width:700px) {
      .menu-hamburguesa {
